# BachelorProject

./: .gitignore  BachelorProject.sln
BachelorProject/: App.xaml  App.xaml.cs  BachelorProject.csproj  Dllwrapper.cs  MainWindow.xaml  MainWindow.xaml.cs
BachelorProject/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
BachelorProjekt/: CMakeLists.txt  MyQComboBox.hxx  cbctregistration_test.cpp  cbctregistration_test.hpp  informationwindow.cpp  informationwindow.h  informationwindow.ui  loadingthread.cpp  loadingthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressbar.cpp  progressbar.h  progressbar.ui  qyklabel.cpp  qyklabel.h  scattercorrectingthread.cpp  scattercorrectingthread.h  scattercorrectthread.cpp  scattercorrectthread.h  scui.cpp  scui.h  scui.ui  scui_io.cpp  scui_io.h  weplthread.cpp  weplthread.h
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-Fejlretning/: .ninja_deps  .ninja_log  BachelorProjekt.cbp  CMakeCache.txt  CPackProperties.cmake  DebugFileNames.txt  build.ninja  cmake_install.cmake  rules.ninja
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-Fejlretning/BachelorProjekt_autogen/: mocs_compilation.cpp
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-Fejlretning/BachelorProjekt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_qyklabel.cpp
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-Fejlretning/BachelorProjekt_autogen/include/: ui_mainwindow.h
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-Fejlretning/ITKFactoryRegistration/: itkImageIOFactoryRegisterManager.h  itkMeshIOFactoryRegisterManager.h
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-RwDi/: .ninja_deps  .ninja_log  BachelorProjekt.cbp  BachelorProjekt.exp  BachelorProjekt.lib  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-RwDi/BachelorProjekt_autogen/EWIEGA46WW/: moc_informationwindow.cpp  moc_mainwindow.cpp
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2017_64bit-RwDi/BachelorProjekt_autogen/include/: ui_informationwindow.h  ui_mainwindow.h
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2019_64bit-RwDi/: .ninja_deps  .ninja_log  BachelorProjekt.cbp  BachelorProjekt.exp  BachelorProjekt.lib  CMakeCache.txt  DebugFileNames.txt  DefaultConfig.cfg  RTKgeometry.xml  build.ninja  cmake_install.cmake  fdk_opencl.cl  rules.ninja
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2019_64bit-RwDi/BachelorProjekt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_progressbar.cpp
build-BachelorProjekt-Desktop_Qt_5_13_0_MSVC2019_64bit-RwDi/BachelorProjekt_autogen/include/: ui_informationwindow.h  ui_mainwindow.h  ui_progressbar.h
build-RwDi/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BachelorProjekt.sln  BachelorProjekt.vcxproj  BachelorProjekt.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-RwDi/BachelorProjekt.dir/RelWithDebInfo/BachelorProjekt.tlog/: BachelorProjekt.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-RwDi/BachelorProjekt_autogen/: mocs_compilation.cpp
build-RwDi/BachelorProjekt_autogen/include_RelWithDebInfo/: ui_mainwindow.h
build-RwDi/BachelorProjekt_autogen/include_RelWithDebInfo/EWIEGA46WW/: moc_informationwindow.cpp  moc_mainwindow.cpp  moc_progressbar.cpp  moc_qyklabel.cpp
